# textDB

./: .gitignore  README.md  index.html  package.json  promptDB  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: db.ts  tln.ts
src/markdown/: markdown-render.css  markdown.js
