[package]
name = "textdb"
version = "0.1.0"
description = "TextDB"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
